--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
                 "typescript": "^5.9.3"
         },
         "dependencies": {
+                "auto-manager-core": "file:../core",
                 "auto-manager-scheduler": "file:../scheduler"
         }
 }
