--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -9,5 +9,8 @@
         "devDependencies": {
                 "prettier": "^3.6.2",
                 "typescript": "^5.9.3"
+        },
+        "dependencies": {
+                "auto-manager-core": "file:../core"
         }
 }
