--- a/core/package.json
+++ b/core/package.json
@@ -9,5 +9,9 @@
         "devDependencies": {
                 "prettier": "^3.6.2",
                 "typescript": "^5.9.3"
+        },
+        "dependencies": {
+                "auto-manager-ui": "file:../ui",
+                "example": "*"
         }
 }
