--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -11,6 +11,8 @@
                 "typescript": "^5.9.3"
         },
         "dependencies": {
-                "auto-manager-core": "file:../core"
+                "auto-manager-core": "file:../core",
+                "auto-manager-ui": "file:../ui",
+                "example": "*"
         }
 }
