Make buildin server workspace

--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
                 "auto-manager-core": "file:../core",
                 "auto-manager-scheduler": "file:../scheduler",
                 "auto-manager-server": "file:../server",
-                "auto-manager-ui": "file:../ui"
+                "auto-manager-ui": "file:../ui",
+		"auto-manager-builtin-server": "file:../builtin-server"
         }
 }
