--- a/auto-manager/package.json
+++ b/auto-manager/package.json
@@ -1,5 +1,5 @@
 {
-        "name": "auto-manager-api",
+        "name": "auto-manager",
         "main": "build/main.js",
         "type": "module",
         "scripts": {
@@ -7,12 +7,9 @@
                 "format": "prettier . --config ../.prettierrc --ignore-path ../.gitignore --write"
         },
         "devDependencies": {
+                "@types/node": "^24.7.2",
                 "prettier": "^3.6.2",
                 "typescript": "^5.9.3"
         },
-        "dependencies": {
-                "auto-manager-core": "file:../core",
-                "auto-manager-server": "file:../server",
-                "auto-manager-ui": "file:../ui"
-        }
+        "dependencies": {}
 }
